# arco

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: astar_examples.yml  formatting.yml  generate_images.yml  pyreverse.yml  release_ppp_video.yml  release_rr_video.yml  release_videos.yml  smoke.yml  smoke_test_simulators.yml  tests.yml
config/: astar.yml  controller.yml  guidance.yml  mapping.yml  rrt.yml
docs/: ENTITY_MODEL.md  GUIDANCE.md  MAPPING.md  PIPELINE.md  PLANNING.md  README.md  ROADMAP.md  STACK.md  VISUALIZATION.md  city_network.md  entity_formats.md  guidelines.md  horse_auto_follow.md  paris_network.md  phase3_acceptance_report.md  planning_astar.md  planning_dstar.md  planning_optimizer.md  planning_rrt.md  planning_sst.md  route_planning_benchmarks.md  tools_migration.md
docs/pyreverse/: classes.html  packages.html
hooks/: pre-push
map/: astar.yml  city.yml  occ.yml  ppp.yml  rr.yml  rrp.yml  vehicle.yml
scripts/: check_formatting.sh  generate_diagrams.sh  generate_videos.sh  install_hooks.sh  post-commit.sh  post_images_report.sh  post_smoke_report.sh  pre_push.sh  pre_report_progress.sh  publish_release_videos.sh  render_package_map.py  render_scoped.py  run_example.sh  run_examples.sh  run_smoke_test.sh  run_smoke_tests.sh  run_tests.sh  zip_images.sh
src/arco/: __init__.py
tests/: test_diagram_scripts.py  test_pipeline.py
tests/config/: test_palette.py
tests/control/: test_actuator.py  test_joint_tracker.py  test_pure_pursuit.py  test_rigid_body.py  test_tracking_loop.py
tests/guidance/: __init__.py  test_controller.py  test_dubins_primitive.py  test_dubins_vehicle.py  test_guidance.py  test_ppp_robot.py  test_pure_pursuit.py  test_tracking_loop.py
tests/kinematics/: test_rr.py  test_rrp.py
tests/mapping/: __init__.py  test_graph_generator.py  test_grid.py  test_kdtree_occupancy.py  test_loader.py  test_occupancy.py  test_road_graph.py  test_road_network_generator.py  test_weighted_graph.py
tests/middleware/: __init__.py  test_bus.py  test_publisher.py  test_subscriber.py  test_types.py
tests/pipeline/: __init__.py  test_node.py  test_runner.py
tests/planning/: __init__.py  test_astar.py  test_dstar.py  test_pipeline.py  test_planning_api.py
tests/tools/: test_astar_cell_size.py  test_cli.py  test_enable_pruning.py  test_frame_renderer.py  test_layout.py  test_occ_controller.py  test_ppp_robot.py  test_ppp_scene.py  test_rrp_race_robot.py  test_scene_snapshot.py  test_trace.py
tools/: README.md  __init__.py  astar_graph_example.py  astar_grid_obstacle_example.py  astar_manhattan_example.py  plot_astar_grid.py
tools/arcoex/: __main__.py
tools/arcosim/: __init__.py  __main__.py
tools/config/: __init__.py  astar.yml  city.yml  city_network.json  colors.yml  graph.yml  grid.yml  map.yml  obstacles.yml  occ.yml  optimizer.yml  osm.yml  paris_network.json  ppp.yml  random.yml  rr.yml  rrp.yml  rrt.yml  simulation.yml  sparse.yml  (+2 more)
(+300 files in other folders)
