[project]
name = "arco"
version = "0.2.2"
description = "Autonomous Routing, Control, and Observation algorithms in Python"
authors = [
    { name = "Alexandre Loeblein Heinen" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "matplotlib",
    "pylint",
    "pydocstyle"
]
tools = [
    "arco",
    "matplotlib",
    "pyyaml"
]
pygame = [
    "pygame>=2.0.0",
    "PyOpenGL>=3.1.0",
]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]  # Ignore module and package docstrings
