[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arco"
version = "0.3.0"
description = "Autonomous Routing, Control, and Observation algorithms in Python"
authors = [
    { name = "Alexandre Loeblein Heinen" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "matplotlib",
    "pyyaml",
    "graphviz",
    "pydocstyle"
]
tools = [
    "arco",
    "matplotlib",
    "pyyaml",
    "pygame>=2.0.0",
    "PyOpenGL>=3.1.0"
]

[project.scripts]
arcosim = "arco.tools.arcosim.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arco.config" = [
    "*.json",
    "*.yml",
]
"arco.tools.map" = [
    "*.json",
    "*.yml",
]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]  # Ignore module and package docstrings
