[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arco"
version = "0.3.0"
description = "Autonomous Routing, Control, and Observation algorithms in Python"
authors = [
    { name = "Alexandre Loeblein Heinen" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "matplotlib",
    "graphviz",
    "pydocstyle"
]
tools = [
    "arco",
    "pygame>=2.0.0",
    "PyOpenGL>=3.1.0",
]

[project.scripts]
arcosim = "arco.simulator.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# This identifies the 'arco.config' sub-package and includes its .yml files
"arco.config" = ["*.yml"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]  # Ignore module and package docstrings